# SeldomEscape

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  animloader.cpp  animloader.h  basegl.cpp  basegl.h  basesdl.cpp  basesdl.h  camera.cpp  camera.h  creature.cpp  creature.h  ending.cpp  game_math.cpp  game_math.h  global.h  image_loading.cpp  image_loading.h  main.cpp  maps.cpp  maps.h  objload.cpp  objload.h  se_main.cpp  win_auto_build.bat  win_update_libs.bat
VC/: MyPark.vcxproj
VC/Debug/: CL.read.1.tlog  CL.write.1.tlog  MyPark.ilk  MyPark.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
VC/Final/: dontreadme.txt
VC/Release/: CL.read.1.tlog  CL.write.1.tlog  MyPark.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
lib/: libloaders.lib  liblower.lib
libloaders/: load_anim.cpp  load_image.cpp  load_obj.cpp  load_text.cpp
libloaders/font_distiller/: font_distiller.sln
libloaders/include/: load_anim.hpp  load_image.hpp  load_obj.hpp  load_text.hpp
liblower/: base_gl.cpp  base_sdl.cpp  debug_output.cpp  ending.cpp
liblower/include/: base_gl.hpp  base_sdl.hpp  debug_output.hpp  global.hpp
libseldom/: camera.cpp  creature.cpp  game_math.cpp  maps.cpp  trigger.cpp
res/: scpark-l.blend  scpark-l.blend1  scpark-l.blend2  scpark-l.mtl  scpark.blend  scpark.blend1  scpark.blend2  scpark.mtl  tiolet.blend  tiolet.blend1  tiolet.blend2  toilet.blend
(+35 files in other folders)
